1.1.0 [not yet released]
 - Fix bug introduced by SWIG 2.0.5, where typemaps of templated typedefs are not handled correctly
 - Fix bug introduced by SWIG 2.0.5, which treated uint as Python long
 - Add check that sample points for TimeSeries are monotone
 - Fix handling of parameter "report" in Krylov solvers
 - Add new linear algebra backend "PETScCusp" for GPU-accelerated linear algebra
 - Add sparray method in the Python interface of GenericMatrix, requires scipy.sparse
 - Make methods that return a view of contigous c-arrays, via a NumPy array, keep
	a reference from the object so it wont get out of scope
 - Add parameter: "use_petsc_signal_handler", which enables/disable PETSc system signals
 - Avoid unnessesary resize of result vector for A*b
 - MPI functionality for distributing values between neighbours
 - SystemAssembler now works in parallel with topological/geometric boundary search
 - New symmetric assembler with ability for stand-alone RHS assemble
 - Major speed-up of DirichletBC computation and mesh marking
 - Major speed-up of assembly of functions and expressions
 - Major speed-up of mesh topology computation
 - Major speed-up of mesh topology computation
 - Add simple 2D and 3D mesh generation (via CGAL)
 - Add creation of mesh from triangulations of points (via CGAL)
 - Split the SWIG interface into six combined modules instead of one
 - Add has_foo to easy check what solver and precondictioners are available
 - Add convenience functions for listing available linear_algebra_backends
 - Change naming convention for cpp unit tests test.cpp -> Foo.cpp
 - Added cpp unit test for GenericVector::operator{-,+,*,/}= for all la backends
 - Add functionality for rotating meshes
 - Add mesh generation based on NETGEN constructive solid geometry
 - Generalise SparsityPattern and STLMatrix to support column-wise storage
 - Add interfaces to wrap PaStiX and MUMPS direct solvers
 - Add CoordinateMatrix class
 - Make STLMatrix work in parallel